--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                     </li>
                     {% endif %}
                     <li>
-                        <a href="#" class="nav-link text-secondary position-relative">
+                        <a href="basket/" class="nav-link text-secondary position-relative">
                             <i class="fa-solid fa-cart-shopping" width="24" height="24"></i> Cart {% if user.is_authenticated %}
                             <h6 class="cart_itrm position-absolute top-0 end-50 text-primary">0</h6>
                             {% endif %}
